# tracker_app_rebuild

./: .gitignore  AGENTS.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  artifacts.json  ci-job-page.html  deploy_steps.md  progress.md  rollout.md  vercel.json
.github/workflows/: deploy.yml  (+1 more)
.playwright-mcp/: backup-2026-05-31.json  page-2026-05-31T02-05-45-633Z.yml  page-2026-05-31T02-05-51-654Z.yml  page-2026-05-31T02-06-16-755Z.yml  page-2026-05-31T02-06-53-160Z.yml  page-2026-05-31T02-07-05-030Z.yml  page-2026-05-31T02-09-29-076Z.yml  page-2026-05-31T02-09-32-832Z.yml  page-2026-05-31T02-11-02-076Z.yml  page-2026-06-02T08-45-50-426Z.yml  page-2026-06-02T08-46-06-019Z.yml  page-2026-06-02T08-46-34-056Z.yml  page-2026-06-02T08-46-55-442Z.yml  page-2026-06-02T08-47-05-195Z.yml  page-2026-06-02T08-47-19-980Z.yml  page-2026-06-02T08-48-09-091Z.yml  page-2026-06-02T08-48-13-168Z.yml  page-2026-06-02T08-48-23-095Z.yml  page-2026-06-02T08-48-57-585Z.yml  page-2026-06-02T08-49-07-269Z.yml  page-2026-06-02T08-49-18-473Z.yml  seed-data.json
backend/: .coverage  .env.example  .gitignore  alembic.ini  pyproject.toml  render.yaml  restart.ps1  seed_complete_data.py  seed_theme.py  test-results.xml  test_kiosk_endpoint.py  verify2.py
backend/alembic/: env.py
backend/alembic/versions/: 36484c036213_initial_schema.py
backend/app/: cli.py  database.py  main.py  models.py  schemas.py
backend/app/auth/: config.py  csrf.py  jwt_utils.py  limiter.py
backend/app/routers/: __init__.py  admin.py  attendance.py  audit.py  auth.py  class_instances.py  class_types.py  classes.py  comments.py  curricula.py  dashboard.py  database.py  feedback.py  gyms.py  kiosk.py  lessons.py  news.py  points_adjustments.py  rank_tiers.py  roles.py  terms.py  themes.py  users.py
backend/app/services/: audit.py  email.py
backend/scripts/: generate_secrets.py
backend/tests/: conftest.py  test_attendance.py  test_auth.py  test_class_instances.py  test_class_types.py  test_classes.py  test_cli.py  test_comments.py  test_csrf.py  test_curricula.py  test_dashboard.py  test_database_router.py  test_feedback.py  test_gyms.py  test_kiosk.py  test_lessons.py  test_news.py  test_roles.py  test_terms.py  test_themes.py  test_users.py
ckb-tracker/: .env.example  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+81 files in other folders)
