[project]
name = "ckb-tracker-backend"
version = "0.1.0"
description = "CKB Tracker FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/auth/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Hard fail thresholds for CI
fail_under = 75

[tool.coverage.html]
directory = "coverage_html"
