[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ckb-tracker-backend"
version = "0.1.0"
description = "CKB Tracker FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.2.0",
    "alembic>=1.18.5",
]

[project.scripts]
ckb = "app.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"app/routers/__init__.py" = ["F401"]
"tests/*" = ["S101", "S105", "S106"]
"scripts/*" = ["S105"]
"app/auth/config.py" = ["S105"]
"app/schemas.py" = ["S105"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/auth/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Hard fail thresholds for CI
fail_under = 75

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.coverage.html]
directory = "coverage_html"
